--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+@import url(../../node_modules/@fortawesome/fontawesome-free/css/all.min.css);
+.dropdown-toggle::after {
+  display: none !important; }
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -6105,6 +6109,10 @@ textarea.form-control-lg {
   font-size: 20px !important;
   line-height: 20px !important; }
 
+.fs-22 {
+  font-size: 22px !important;
+  line-height: 22px !important; }
+
 .fs-24 {
   font-size: 24px !important;
   line-height: 24px !important; }
@@ -6481,6 +6489,9 @@ textarea.form-control-lg {
   .fs-sm-20 {
     font-size: 20px !important;
     line-height: 20px !important; }
+  .fs-sm-22 {
+    font-size: 22px !important;
+    line-height: 22px !important; }
   .fs-sm-24 {
     font-size: 24px !important;
     line-height: 24px !important; }
@@ -6854,6 +6865,9 @@ textarea.form-control-lg {
   .fs-md-20 {
     font-size: 20px !important;
     line-height: 20px !important; }
+  .fs-md-22 {
+    font-size: 22px !important;
+    line-height: 22px !important; }
   .fs-md-24 {
     font-size: 24px !important;
     line-height: 24px !important; }
@@ -7227,6 +7241,9 @@ textarea.form-control-lg {
   .fs-lg-20 {
     font-size: 20px !important;
     line-height: 20px !important; }
+  .fs-lg-22 {
+    font-size: 22px !important;
+    line-height: 22px !important; }
   .fs-lg-24 {
     font-size: 24px !important;
     line-height: 24px !important; }
@@ -7600,6 +7617,9 @@ textarea.form-control-lg {
   .fs-xl-20 {
     font-size: 20px !important;
     line-height: 20px !important; }
+  .fs-xl-22 {
+    font-size: 22px !important;
+    line-height: 22px !important; }
   .fs-xl-24 {
     font-size: 24px !important;
     line-height: 24px !important; }
@@ -7973,6 +7993,9 @@ textarea.form-control-lg {
   .fs-xxl-20 {
     font-size: 20px !important;
     line-height: 20px !important; }
+  .fs-xxl-22 {
+    font-size: 22px !important;
+    line-height: 22px !important; }
   .fs-xxl-24 {
     font-size: 24px !important;
     line-height: 24px !important; }
@@ -8017,3 +8040,9 @@ textarea.form-control-lg {
     display: inline-flex !important; }
   .d-print-none {
     display: none !important; } }
+
+* {
+  font-family: "Rubik", sans-serif; }
+
+.dropdown-menu {
+  min-width: 15rem !important; }
