--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url(../../node_modules/@fortawesome/fontawesome-free/css/all.min.css);
+@import url(../../node_modules/daterangepicker/daterangepicker.css);
 .dropdown-toggle::after {
   display: none !important; }
 
@@ -8042,7 +8043,8 @@ textarea.form-control-lg {
     display: none !important; } }
 
 * {
-  font-family: "Rubik", sans-serif; }
+  font-family: "Rubik", sans-serif;
+  font-variant-ligatures: no-common-ligatures; }
 
 .dropdown-menu {
   min-width: 15rem !important; }
