--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -38,9 +38,11 @@ $border-radius-pill: 128px;
 @import "../scss/utilities";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
+@import "../../node_modules/daterangepicker/daterangepicker.css";
 
 * {
    font-family: "Rubik", sans-serif;
+   font-variant-ligatures: no-common-ligatures;
 }
 
 .dropdown-menu {
